[project]
name = "net-alexandroid-flowdiagram-py"
version = "1.0.1"
description = "Parsing logs to extract workflow steps and visualize them as interactive flow diagrams, helping developers easily track and analyze app behavior and processes."
authors = [
    { name = "Pulimet", email = "korolev2009@gmail.com" }
]
license = { text = "MIT license" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
