[tool.poetry]
name = "net-alexandroid-flowdiagram-py"
version = "1.0.1"
description = "Parsing logs to extract workflow steps and visualize them as interactive flow diagrams, helping developers easily track and analyze app behavior and processes."
authors = [
    "Pulimet <korolev2009@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
matplotlib = "*"

[[tool.poetry.packages]]
include = "src/flow"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"